--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">Admin</string>
     <string name="title_activity_maps">Map</string>
+    <string name="empty_max_range">No existen resultados. Por favor muevase por la ciudad y vuelva a intentarlo</string>
+    <string name="empty_range">No existen resultados. Por favor pruebe con un radio más grande</string>
+    <string name="location_error">No se puede obtener la ubicación. Por favor active la ubicación y vuelva a intentarlo</string>
+    <string name="connection_lost">Se perdió la conexión a Internet. Por favor active el Wifi o los datos moviles y vuelva a intentarlo</string>
+    <string name="no_connection_error">No tienes conexión a Internet. Por favor active el Wifi o los datos moviles y vuelva a intentarlo</string>
 </resources>
