--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">MyHealthApp</string>
     <string name="title_activity_sign_in">Registro</string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_forgot_password">Recuperar contraseña</string>
+    <string name="title_activity_filter">Seleccioná lo que buscas</string>
     <string name="title_activity_health_services">Servicios de salud</string>
     <string name="empty_max_range">No existen resultados. Por favor muevase por la ciudad y vuelva a intentarlo</string>
     <string name="empty_range">No existen resultados. Por favor pruebe con un radio más grande</string>
@@ -13,4 +15,6 @@
     <string name="register_link"><u>Si todavía no tenes cuenta, registrate</u></string>
     <string name="forget_password_link"><u>¿Olvidaste tu contraseña?</u></string>
     <string name="forget_password_text">Vas a poder recuperar tu contraseña</string>
+    <string name="authorizations_text">Vas a poder ver tus autorizaciones</string>
+    <string name="forgot_pass_info">Ingresá el código enviado a tu mail y elegí tu nueva contraseña</string>
 </resources>
