--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="forget_password_text">Vas a poder recuperar tu contraseña</string>
     <string name="authorizations_text">Vas a poder ver tus autorizaciones</string>
     <string name="forgot_pass_info">Ingresá el código enviado a tu mail y elegí tu nueva contraseña</string>
+    <string name="email_info">Ingresá el mail asociado a tu cuenta para poder recuperar tu contraseña</string>
+    <string name="email_code_info">Te vamos a enviar un código que vas a necesitar para la recuperación</string>
 </resources>
