--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,8 @@
     <string name="forgot_pass_info">Ingresá el código enviado a tu mail y elegí tu nueva contraseña</string>
     <string name="email_info">Ingresá el mail asociado a tu cuenta para poder recuperar tu contraseña</string>
     <string name="email_code_info">Te vamos a enviar un código que vas a necesitar para la recuperación</string>
+    <string name="search">Buscar</string>
+    <string name="filter">Filtrar</string>
+    <string name="search_hint">Buscar por nombre</string>
+    <string name="cancel">Cancelar</string>
 </resources>
