Add authorizations screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_forgot_password">Recuperar contraseña</string>
     <string name="title_activity_service_detail">Detalle de servicio</string>
+    <string name="title_activity_authorizations">Autorizaciones</string>
     <string name="title_activity_filter">Seleccioná lo que buscas</string>
     <string name="title_activity_health_services">Servicios de salud</string>
     <string name="empty_max_range">No existen resultados. Por favor muevase por la ciudad y vuelva a intentarlo</string>
@@ -20,7 +21,7 @@
     <string name="register_link"><u>Si todavía no tenes cuenta, registrate</u></string>
     <string name="forget_password_link"><u>¿Olvidaste tu contraseña?</u></string>
     <string name="forget_password_text">Vas a poder recuperar tu contraseña</string>
-    <string name="authorizations_text">Vas a poder ver tus autorizaciones</string>
+    <string name="authorizations_text">Vas a poder crear una nueva autorización</string>
     <string name="forgot_pass_info">Ingresá el código enviado a tu mail y elegí tu nueva contraseña</string>
     <string name="email_info">Ingresá el mail asociado a tu cuenta para poder recuperar tu contraseña</string>
     <string name="email_code_info">Te vamos a enviar un código que vas a necesitar para la recuperación</string>
