--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="search_hint">Buscar por nombre</string>
     <string name="cancel">Cancelar</string>
     <string name="empty_info">No encontramos servicios con estas características, probá cambiando los filtros</string>
+    <string name="empty_auths">No tenés autorizaciones, crea una nueva tocando "+"</string>
 </resources>
